--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,9 @@
     "description": "Simple WordPress REST API Router",
     "keywords": ["wordpress", "rest", "api"],
     "license": "MIT",
+    "version": "1.0.0",
     "require": {
-        "php": ">=5.5.0"
+        "php": "^5.5 || ^7.0"
     },
     "autoload": {
         "psr-4": {"Simple_REST_API\\": "src/"}
